--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,16 @@
 title: "Tateh Charles Junior Aluofu"
 email: "charljr123@gmail.com"
-description: >-
-  Software Engineer | Python • Django • Flask | Building Scalable Web &
-  Business Systems. Passionate about designing efficient architectures and
-  solving complex problems with technology.
-baseurl: "" # leave blank for user site
-url: "https://tatehcharles.github.io" # replace with your GitHub username
+description: "Software Engineer | Python • Django • Flask | Building Scalable Web & Business Systems"
+baseurl: "" # for user site
+url: "https://tatehcharles.github.io"
 theme: minima
+
+# Add navigation menu
+header_pages:
+  - index.md
+  - about.md
+  - projects.md
+  - contact.md
+
 plugins:
   - jekyll-feed
